--- a/css/style.css
+++ b/css/style.css
@@ -220,15 +220,16 @@ body {
 .blog-section__content__article {
     display: flex;
     flex-direction: column;
+    height: 100%;
+    gap: 15px;
 }
 
 .blog-section__content__article img {
     max-width:100%;
-    margin-bottom: 25px;
+    margin-bottom: 10px;
 }
 
 .blog-section__content__article h3, p {
-    margin-bottom: 15px;
     color: var(--color-grey)
 }
 
@@ -507,7 +508,7 @@ footer {
 /******** SHARED ********/
 .container {
     display: flex;
-    max-width: 1050px;
+    max-width: 1088px;
     width: 100%;
     height: 100%;
 }
@@ -519,9 +520,8 @@ footer {
     font-family: var(--font-primary);
 }
 
-a.btn {
+a.btn, .btn a {
     text-decoration: none;
-    text-underline: none;
 }
 
 .btn-red, .btn-red a {
@@ -564,7 +564,15 @@ a.btn {
     align-items: center;
 }
 
-.btn-spacing-secondary {
+.btn__wrapper {
+    width: 100%;
+    display: flex;
+}
+
+.btn__center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 h2 {
